tests/ui/parser/issues/issue-62973.rs
// ignore-tidy-trailing-newlines

fn main() {}

//~vvv ERROR mismatched closing delimiter: `)`
//~vv ERROR mismatched closing delimiter: `)`
//~vvv ERROR this file contains an unclosed delimiter
fn p() { match s { v, E { [) {) }


